--- a/style/donate.css
+++ b/style/donate.css
@@ -3,7 +3,7 @@
     font-family: 'Inter';
 }
 
-/* header styles */
+/* header scetion styles */
 
 .header{
     background-image: url(../images/donation15.jpg);
@@ -31,7 +31,7 @@
     
 }
 
-.donate-now{
+.donate-btn{
     color: #fff;
     background: #FF5959;
     border-radius: 5px;
@@ -44,10 +44,13 @@
     font-size: 20px;
 }
 
+/* main scetion styles */
 main{
     text-align: center;
 
 }
+
+/* Donate amount scetion styles */
 
 .donate-amount p{
     color: #707070;
@@ -71,6 +74,8 @@ h2{
     font-size: 30px;
     margin-bottom: 60px;
 }
+
+/* Donate plan scetion styles */
 
 .donate-plan p{
     color: #707070;
@@ -112,4 +117,108 @@ h4{
     background: rgb(255, 244, 214);
     border-radius: 5px;
     padding: 60px 20px;
+}
+
+/* Contribution Section Styles */
+
+.contribution{
+    text-align: left;
+    display: flex;
+    padding: 0 auto;
+    margin: 100px 150px;
+    align-items: center;
+    gap: 90px;
+}
+
+.cont-img img{
+    width: 456px;
+    height: 477px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.contrbute-btn{
+    color: #fff;
+    background: #FF5959;
+    border-radius: 5px;
+    border: none;
+    width: 230px;
+    height: 56px;
+    padding: 16px 21px;
+    margin-top: 30px;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+h3{
+    font-size: 45px;
+}
+
+.cont-text p{
+    margin-top: 20px;
+   color: #707070;
+}
+
+/* Update section styles */
+
+.update h2{
+    font-weight: 700;
+    
+}
+.update p{
+    color: #707070;
+    margin: 20px 0;
+}
+
+.email-with-button{
+    background: #FFF4D6;
+    margin: 60px 315px;
+    display: flex;
+    align-items: center;
+}
+
+.email-with-button input{
+    width: 275px;
+    height: 43px;
+    background: #D9D9D9;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.subscribe-btn{
+    background: #FF5959;
+    border-radius: 0 5px 5px 0;
+    border: 0;
+    width: 157px;
+    height: 48px;
+    margin-top: 30px;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.subscribe-btn a{
+    color: #fff;
+    text-decoration: none;
+}
+
+/* footer section style */
+
+footer{
+    background: #0B0D17;
+    text-align: center;
+    
+}
+
+.footer-title{
+    font-family: 'Lobster';
+    font-weight: 400;
+    font-size: 36px;
+    color: #FF5959;
+    padding-top: 42px;
+}
+
+.footer-text{
+    font-size: 14px;
+    color: #D9DBE1;
+    padding-bottom: 42px;
+    margin-top: 25px;
 }
