--- a/style/donate.css
+++ b/style/donate.css
@@ -201,30 +201,35 @@ h3{
 
 .email-with-button{
     background: #FFF4D6;
-    margin: 60px 315px;
+    padding: 70px 50px;
+    margin-bottom: 60px;
     display: flex;
-    align-items: center;
     justify-content: center;
+    width: 50%;
+    margin: auto;
+    margin-bottom: 50px;
 }
 
 #email{
+    color: darkgray;
     width: 275px;
-    height: 43px;
-    margin: 0;
+    height: 50px;
+    margin-top: 30;
     padding: 2px 15px;
     background: #D9D9D9;
     border-radius: 5px 0px 0px 5px;
+    border: none;
 }
 
-.subscribe-btn{
+#subscribe-btn{
     background: #FF5959;
     border-radius: 0 5px 5px 0;
     border: 0;
-    width: 157px;
-    height: 48px;
+    padding: 15px 20px;
     margin-top: 30px;
     font-weight: 600;
     font-size: 20px;
+    color: #fff;
 }
 
 .subscribe-btn a{
